Adjusted some page title meta data, classs, fonts, corrections in copy, alignments and other minor issues found

--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Oct 19 2020 06:14:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 19 2020 06:42:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7712dd7241dd614edcf62e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
       <h1 class="section_h1">Terms of Use</h1>
       <p class="legal_timestamp"><strong>Last updated September 13, 2020</strong></p>
       <h2 class="legal_h2">TABLE OF CONTENTS</h2>
-      <ol role="list">
+      <ol role="list" class="list-3">
         <li><a href="#tou_section_1" class="blue_link">AGREEMENT TO TERMS</a></li>
         <li><a href="#tou_section_2" class="blue_link">INTELLECTUAL PROPERTY RIGHTS</a></li>
         <li><a href="#tou_section_3" class="blue_link">USER REPRESENTATIONS</a></li>
@@ -59,7 +59,7 @@
   <div id="tou_section_1" class="tou_section_1">
     <div class="main_container">
       <h2 class="legal_h2">1. AGREEMENT TO TERMS</h2>
-      <p class="legal_para">These Terms of Use constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and JohnBarrett.io (&quot;<strong>Company</strong>&quot;, “<strong>we</strong>”, “<strong>us</strong>”, or “<strong>our</strong>”), concerning your access to and use of the <a href="https://www.ryuacupuncture.com" target="_blank" class="blue_link">https://www.ryuacupuncture.com</a> website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the “Site”). You agree that by accessing the Site, you have read, understood, and agreed to be bound by all of these Terms of Use. IF YOU DO NOT AGREE WITH ALL OF THESE TERMS OF USE, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SITE AND YOU MUST DISCONTINUE USE IMMEDIATELY.<br>‍<br>Supplemental terms and conditions or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms of Use at any time and for any reason. We will alert you about any changes by updating the “Last updated” date of these Terms of Use and you waive any right to receive specific notice of each such change. It is your responsibility to periodically review these Terms of Use to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms of Use by your continued use of the Site after the date such revised Terms of Use are posted.<br><br>The information provided on the Site is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country. Accordingly, those persons who choose to access the Site from other locations do so on their own initiative and are solely responsible for compliance with local laws, if and to the extent local laws are applicable.<br><br>The Site is intended for users who are at least 18 years old. Persons under the age of 18 are not permitted to use or register for the Site. </p>
+      <p class="legal_para">These Terms of Use constitute a legally binding agreement made between you, whether personally or on behalf of an entity (“you”) and Ryuacupuncture.com (&quot;<strong>Company</strong>&quot;, “<strong>we</strong>”, “<strong>us</strong>”, or “<strong>our</strong>”), concerning your access to and use of the <a href="https://www.ryuacupuncture.com" target="_blank" class="blue_link">https://www.ryuacupuncture.com</a> website as well as any other media form, media channel, mobile website or mobile application related, linked, or otherwise connected thereto (collectively, the “Site”). You agree that by accessing the Site, you have read, understood, and agreed to be bound by all of these Terms of Use. IF YOU DO NOT AGREE WITH ALL OF THESE TERMS OF USE, THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE SITE AND YOU MUST DISCONTINUE USE IMMEDIATELY.<br>‍<br>Supplemental terms and conditions or documents that may be posted on the Site from time to time are hereby expressly incorporated herein by reference. We reserve the right, in our sole discretion, to make changes or modifications to these Terms of Use at any time and for any reason. We will alert you about any changes by updating the “Last updated” date of these Terms of Use and you waive any right to receive specific notice of each such change. It is your responsibility to periodically review these Terms of Use to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms of Use by your continued use of the Site after the date such revised Terms of Use are posted.<br><br>The information provided on the Site is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country. Accordingly, those persons who choose to access the Site from other locations do so on their own initiative and are solely responsible for compliance with local laws, if and to the extent local laws are applicable.<br><br>The Site is intended for users who are at least 18 years old. Persons under the age of 18 are not permitted to use or register for the Site. </p>
     </div>
   </div>
   <div id="tou_section_2" class="tou_section_2">
@@ -233,7 +233,7 @@
   <div id="tou_section_22" class="tou_section_22">
     <div class="main_container">
       <h2 class="legal_h2">22. CONTACT US</h2>
-      <p class="legal_para">In order to resolve a complaint regarding the Site or to receive further information regarding use of the Site, please contact us at: <br><strong><br>‍jb@johnbarrett.io</strong></p>
+      <p class="legal_para">In order to resolve a complaint regarding the Site or to receive further information regarding use of the Site, please contact us at <a href="mailto:ryuacupuncture@yahoo.com" target="_blank" class="blue_link">ryuacupuncture@yahoo.com</a> or by post to:<br>‍<br>Ryu Acupuncture Clinic, Inc<br>3808 W. Riverside Dr., #510<br>Burbank, CA 91505<br>United States: <br></p>
     </div>
   </div>
   <div class="footer_section">
