--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<!--  Last Published: Mon Oct 19 2020 06:14:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Oct 19 2020 06:42:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
-  <title>Ryu Acupuncture</title>
+  <title>Ryu Acupuncture Clinic, Inc | Acupuncture &amp; Herbs</title>
+  <meta content="Ryu Acupuncture Clinic, Inc | Acupuncture &amp; Herbs" property="og:title">
+  <meta content="Ryu Acupuncture Clinic, Inc | Acupuncture &amp; Herbs" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
