--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<!--  Last Published: Fri Oct 23 2020 06:50:40 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 06 2020 07:41:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -19,7 +18,14 @@
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav_link w-nav-link">Home</a><a href="team.html" class="nav_link w-nav-link">Team</a><a href="services.html" class="nav_link w-nav-link">Services</a><a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a><a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a><a href="contact.html" aria-current="page" class="nav_link w-nav-link w--current">Contact</a></nav>
+      <nav role="navigation" class="nav-menu w-nav-menu">
+        <a href="index.html" class="nav_link w-nav-link">Home</a>
+        <a href="team.html" class="nav_link w-nav-link">Team</a>
+        <a href="services.html" class="nav_link w-nav-link">Services</a>
+        <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
+        <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
+        <a href="contact.html" aria-current="page" class="nav_link w-nav-link w--current">Contact</a>
+      </nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
@@ -36,7 +42,8 @@
         <div class="_2_block margin_left">
           <div class="form-block w-form">
             <form id="email-form" name="email-form" data-name="Email Form" data-w-id="6df80a4d-3aac-723a-9665-be140689882d" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="Phone" required=""><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="Field" class="w-input"></textarea>
-              <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button"></form>
+              <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button">
+            </form>
             <div class="w-form-done">
               <div>Thank you! Your submission has been received!</div>
             </div>
@@ -58,16 +65,32 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="team.html" class="link_white">About</a></li>
-              <li class="footer_link"><a href="services.html" class="link_white">Services</a></li>
-              <li class="footer_link"><a href="conditions-treated.html" class="link_white">Conditions Treated</a></li>
-              <li class="footer_link"><a href="testimonials.html" class="link_white">Testimonials</a></li>
-              <li class="footer_link"><a href="contact.html" aria-current="page" class="link_white w--current">Contact</a></li>
+              <li class="footer_link">
+                <a href="team.html" class="link_white">About</a>
+              </li>
+              <li class="footer_link">
+                <a href="services.html" class="link_white">Services</a>
+              </li>
+              <li class="footer_link">
+                <a href="conditions-treated.html" class="link_white">Conditions Treated</a>
+              </li>
+              <li class="footer_link">
+                <a href="testimonials.html" class="link_white">Testimonials</a>
+              </li>
+              <li class="footer_link">
+                <a href="contact.html" aria-current="page" class="link_white w--current">Contact</a>
+              </li>
             </ul>
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link"><a href="terms-of-use.html" class="link_white">Terms of Use</a></li>
-              <li class="footer_link"><a href="privacy.html" class="link_white">Privacy Policy</a></li>
-              <li class="footer_link"><a href="#" class="link_white">Site Map</a></li>
+              <li class="footer_link">
+                <a href="terms-of-use.html" class="link_white">Terms of Use</a>
+              </li>
+              <li class="footer_link">
+                <a href="privacy.html" class="link_white">Privacy Policy</a>
+              </li>
+              <li class="footer_link">
+                <a href="#" class="link_white">Site Map</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -89,13 +112,25 @@
           <h3 class="footer_h3">Contact Us</h3>
           <div class="w-layout-grid footer_grid_1_block">
             <ul role="list" class="list-2 w-list-unstyled">
-              <li class="footer_link"><a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr. #510</a></li>
+              <li class="footer_link">
+                <a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="footer_link">3808 W. Riverside Dr. #510</a>
+              </li>
               <li class="footer_link">Burbank, CA 91505</li>
-              <li class="footer_link">Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a></li>
-              <li class="footer_link">Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a></li>
-              <li class="footer_link">Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a></li>
-              <li class="footer_link"><a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a></li>
-              <li class="footer_icons"><a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a> <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a><a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a></li>
+              <li class="footer_link">Phone: <a href="tel:8188419790" class="footer_link">(818) 841-9790</a>
+              </li>
+              <li class="footer_link">Text: <a href="tel:9095662258" class="footer_link">(909) 566-2258</a>
+              </li>
+              <li class="footer_link">Fax: <a href="tel:8188419092" class="footer_link">(818) 841-9092</a>
+              </li>
+              <li class="footer_link">
+                <a href="mailto:ryuacupuncture@yahoo.com" class="footer_link">ryuacupuncture@yahoo.com</a>
+              </li>
+              <li class="footer_icons">
+                <a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a>
+              </li>
             </ul>
           </div>
         </div>
