Corrected an issue with the footer where the word team wasn't a link, need to finish as client is requesting finally

--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 02 2020 07:29:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Apr 08 2021 06:24:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f759b55b643fb59da8baab6" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -44,7 +44,9 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link">Team</li>
+              <li class="footer_link">
+                <a href="team.html" class="link_white">Team</a>
+              </li>
               <li class="footer_link">
                 <a href="services.html" class="link_white">Services</a>
               </li>
