--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 02 2020 07:29:19 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Apr 08 2021 06:24:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -186,37 +186,37 @@
       <h2 class="section_h2">Our Services</h2>
       <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="cards_grid">
-        <div id="w-node-bb3cbd291ef5-bfb09bd8" class="card_block">
+        <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291ef5-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/needles_close_up.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291ef7" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" alt="" class="cards_img"></div>
           <h3 class="card_h3">Acupuncture</h3>
           <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-        <div id="w-node-bb3cbd291f03-bfb09bd8" class="card_block">
+        <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f03-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291f05" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" alt="" class="cards_img"></div>
-          <h3 id="w-node-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
-          <p id="w-node-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <h3 id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
+          <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-        <div id="w-node-bb3cbd291efc-bfb09bd8" class="card_block">
+        <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291efc-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/cupping.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291efe" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" alt="" class="cards_img"></div>
-          <h3 id="w-node-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
-          <p id="w-node-bb3cbd291f01-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <h3 id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
+          <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f01-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
       </div>
       <div class="cards_grid">
-        <div id="w-node-7dade4327f0e-bfb09bd8" class="card_block">
+        <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f0e-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/auriculotherapy.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f10" alt="" class="cards_img"></div>
           <h3 class="card_h3">Auriculotherapy</h3>
           <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-        <div id="w-node-7dade4327f15-bfb09bd8" class="card_block">
+        <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f15-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/moxibustion.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f17" alt="" class="cards_img"></div>
-          <h3 id="w-node-7dade4327f18-bfb09bd8" class="card_h3">Moxibustion</h3>
-          <p id="w-node-7dade4327f1a-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <h3 id="w-node-a5855f2e-be73-11df-a01b-7dade4327f18-bfb09bd8" class="card_h3">Moxibustion</h3>
+          <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1a-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
-        <div id="w-node-7dade4327f1c-bfb09bd8" class="card">
+        <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1c-bfb09bd8" class="card">
           <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f1e" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" alt="" class="cards_img"></div>
-          <h3 id="w-node-7dade4327f1f-bfb09bd8" class="card_h3">Heat Therapy</h3>
-          <p id="w-node-7dade4327f21-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <h3 id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1f-bfb09bd8" class="card_h3">Heat Therapy</h3>
+          <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f21-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
         </div>
       </div>
       <a href="services.html" class="ryu_button w-button"><strong>LEARN MORE</strong></a>
@@ -403,7 +403,9 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link">Team</li>
+              <li class="footer_link">
+                <a href="team.html" class="link_white">Team</a>
+              </li>
               <li class="footer_link">
                 <a href="services.html" class="link_white">Services</a>
               </li>
