Corrected spacing issue with the footer, which likely causes issues across site with 4 block rows, also changed footer h3s

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 09 2021 06:50:10 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Apr 11 2021 03:39:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
         <source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true">
         <source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true">
       </video>
-      <h1 data-w-id="3f244832-e3f0-0b4b-02c0-cd924a20215a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_title">Ryu Acupuncture Clinic, Inc</h1>
+      <h1 data-w-id="3f244832-e3f0-0b4b-02c0-cd924a20215a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_title">Ryu Acupuncture Clinic</h1>
       <h2 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
       <a data-w-id="0c17420e-eef8-af9a-4840-bcd529904723" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
     </div>
@@ -184,7 +184,7 @@
   <div id="Services" class="services_section">
     <div class="main_container">
       <h2 class="section_h2">Our Services</h2>
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+      <p class="solo_para">Ryu Acupuncture Clinic offers a wide range of holistic preventative and rehabilitative services within the city of Burbank, California. Eastern Medicine has been used to treat and prevent disease for over 2,500 years across the Asian continent and has been proved effective for a wide array of chronic conditions. We </p>
       <div class="cards_grid">
         <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291ef5-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/needles_close_up.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291ef7" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" alt="" class="cards_img"></div>
@@ -396,7 +396,8 @@
   <div class="footer_section">
     <div class="main_container">
       <div class="_4_block_row">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+          <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
           <p class="disclaimer_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
