--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Apr 09 2021 06:50:10 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Apr 11 2021 03:39:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7712dd7241dd614edcf62e" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -289,7 +289,8 @@
   <div class="footer_section">
     <div class="main_container">
       <div class="_4_block_row">
-        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2">
+        <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
+          <h3 class="footer_h3">Ryu Acupuncture, Inc</h3>
           <p class="disclaimer_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16d" class="_4_block">
